--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="An intelligent platform for automated and partner-centric risk transformation">
-    <title>XRISK</title>
+    <title>Mansa</title>
+    <link rel="icon" type="image/png" href="../src/assests/imgs/jamiah_logo_color.png" />
   </head>
   <body>
     <div id="root"></div>
