--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="An intelligent platform for automated and partner-centric risk transformation">
     <title>Mansa</title>
-    <link rel="icon" type="image/png" href="../src/assests/imgs/jamiah_logo_color.png" />
+    <link rel="icon" type="image/png" href="./jamiah_logo_color.png" />
   </head>
   <body>
     <div id="root"></div>
